Tool Basics added

--- a/frontend/src/pages/tool.module.css
+++ b/frontend/src/pages/tool.module.css
@@ -5,105 +5,10 @@
     box-sizing: border-box;
 }
 
-.charts {
-    position: relative;
-}
-
-.firstDivistion {
-    width: 46%;
-    padding: 2%;
-    height: 430px;
-    float: right;
-}
-
-.secondDivistion {
-    width: 46%;
-    padding: 2%;
-    height: 430px;
-    float: right;
-}
-
-.button {
-    width: 20pc;
-    height: 5pc;
-    margin: auto 0;
-    text-align: center;
-    padding: 3px;
-    font-size: 20px;
-    position: relative;
-    display: inline-block;
-    padding: 25px 30px;
-    margin: 2px 0;
-    color: #ffffff;
-    text-decoration: none;
-    text-transform: uppercase;
-    transition: 0.5s;
-    letter-spacing: 4px;
-    overflow: hidden;
-    margin-right: 50px;
-}
-
-.button:hover {
-    background: #03e9f4;
-    color: #050801;
-    box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
-      0 0 200px #03e9f4;
-    -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
-}
-.button:nth-child(1) {
-    filter: hue-rotate(270deg);
-}
-
-.button span {
-    position: absolute;
-    display: block;
-}
-.button span:nth-child(1) {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(90deg, transparent, #03e9f4);
-    animation: animate1 1s linear infinite;
-}
-@keyframes animate1 {
-    0% {
-      left: -100%;
-    }
-    50%,
-    100% {
-      left: 100%;
-    }
-}
-
-.table {
-    width: 79%;
-    border-radius: 1px;
-    padding: 2px;
-    text-align: left;
-}
-
-.tr {
-    height: 100%;
-    /* padding: 1 rem; */
-}
-
-.td {
-    padding: 0.4rem;
-}
-
-.label {
-    font-size: 2rem;
-    color: royalblue;
-}
-
-.input {
-    font: inherit;
-    padding: 0.2em 0.3em;
-    font-weight: bold;
-    font-size: 1.5rem;
-}
-
-.button_td {
-    text-align: center;
+.outdivision {
+    background-color: lightgrey;
+    width: 300px;
+    border: 15px solid green;
+    padding: 50px;
+    margin: 20px;
 }
