--- a/frontend/src/pages/tabout.module.css
+++ b/frontend/src/pages/tabout.module.css
@@ -7,11 +7,19 @@
 
 /* Division */
 
+.maindiv {
+  background-image: url("/temp.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover; 
+}
+
 .readmediv {
   align-self: center;
   text-align: left;
   width: 85%;
   border: 0.2rem solid green;
+  background-color: white;
   padding: 2rem;
   margin: auto;
 }
